# waaf

./: .gitignore  README.md  WaaF.postman_collection.json  deploy.ps1  docker-compose.yaml  go.mod
benchmarks/: notes.md
function-group-stack/nginx/: .gitignore  Dockerfile  docker-compose.yaml  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsconfig.json.old  webpack.config.js
function-lib/: Cargo.toml  README.md
function-lib/functions/authentication/login/: Cargo.toml  Dockerfile  deployment.yaml
function-lib/functions/authentication/login/src/: main.rs  test.rs
function-lib/functions/sum/: Cargo.toml
function-lib/functions/sum/src/: main.rs
function-lib/functions/test/: Cargo.toml
function-lib/functions/tokio/: .Cargo.toml.un~
function-lib/functions/tokio/src/: .main.rs.un~  main.rs  main.rs~
function-lib/lib/: handle_func.rs  lib.rs  test.rs  wasmedge_connect.rs
libs/models/: userIdWrapper.go
libs/token/: go.mod  parseToken.go  validation.go
services/api-gateway/: deploy.ps1  go.mod  go.sum  gqlgen.yml  main.go  tools.go
services/authentication/: Dockerfile  deploy.ps1  docker-compose.yaml  go.mod  go.sum  main.go
services/deployer/: Dockerfile  deploy.ps1  go.mod  go.sum  main.go
services/function-group/: Dockerfile  deploy.ps1  docker-compose.yaml  go.mod  go.sum  main.go
services/function-uploader/: Dockerfile  deploy.ps1  docker-compose.yaml  (+3 more)
setup/: local-registry.configmap.temp.yaml  local-registry.temp.yaml  local-registry.yaml  run-registry.ps1  setup-kind.ps1  test-job.yaml  test-wasm-http-deployment.yaml
(+113 files in other folders)
